Updated v1.9.0 release notes with #24 changes

--- a/release-notes/v1.9.0.md
+++ b/release-notes/v1.9.0.md
@@ -2,24 +2,30 @@
 
 This update adds a major feature that will allow easier access to rooms, characters, inventory items, and dialogs from code. It also includes an updated navigation system, improvements to save/load the game, a scroll bar for the dialog options menu, and an option to specify the player-controlled character (or PC) in the contextual menu of each character row in the main tab.
 
+👉👉👉 Check [the wiki](https://github.com/mapedorr/popochiu/wiki) for more details! 👈👈👈
+
 ## Fixes
 
 - The inventory was not cleared when loading a saved game. This would cause inventory items to be duplicated with the items loaded from a saved game session, or to remain in the inventory without regard to the items that had actually been saved.
 - The deprecation warning seen since Godot 3.5 about the **Navigation 2D** node and `Navigation2D.get_simple_path()` has disappeared. Now the plugin uses the **Navigation2DServer** to make characters move through rooms. (This update is thanks to the work we are doing for Popochiu 2).
 - **WalkToHelper** and **BaselineHelper** nodes in **PopochiuClickable** objects are no longer orphaned. When the game runs, these nodes are properly DESTROYED.
 - An internal error caused the plugin to try to disable non-existing options in the row context menus in Popochiu's dock.
+- Using `D.show_inline_dialog()` inside a dialog no longer causes the options of the dialog to be displayed after selecting an option of the inline dialog.
+- Using `D.show_inline_dialog()` no longer makes the inventory unavailable.
 
 ## New features
 
 - Saving/loading the game now takes into account Props, Hotspots, Walkable areas and Regions. This also allows the state of each room to be preserved during gameplay (i.e. changes made to these objects will be saved when players move between rooms). In addition, the status of characters and inventory items is now also saved.
 - **PopochiuSettings** now has a property (`max_dialog_options`) to set the number of options to show in branching dialog menus before adding a scroll bar to show more options if they exceed this limit.
 - You can easily make characters walk to a prop, hotspot or point in the current room using the methods: `walk_to_prop()`, `walk_to_hotspot()` and `walk_to_point()`, which are now available for each character.
-  ```
+  ```GDScript
   C.Goddiu.walk_to_prop('ToyCar')
   ```
 - ⭐ What was that? What does `C.Goddiu` mean? In this update we have achieved something great: You can now access characters, inventory items, dialogs and rooms from code with autocompletion based on the existing objects in the project. This can be better explained with code:
-  ```
+  ```GDScript
   func on_interact() -> void:
+    A.mx_kids_game.play_now(3) # Plays the mx_kids_game music with a fade of 3 seconds
+
     yield(E.run([
       C.Goddiu.walk_to_prop('ToyCar'), # Make Goddiu walk to the toy car prop
       "Player: Can I take this toy car with me?",
@@ -30,6 +36,7 @@ This update adds a major feature that will allow easier access to rooms, charact
       "Popsy: No! It's mine",
       "Player: Pleeeease",
       C.Popsy.say('mmm... oook'), # Another way to make characters talk
+      A.sfx_toy_car.play(), # Plays the sfx_toy_car sound
       I.ToyCar.add() # Add the toy car inventory item to the inventory
     ]), 'completed')
 
@@ -40,10 +47,7 @@ This update adds a major feature that will allow easier access to rooms, charact
     D.ChatWithPopsy.start()
   ```
 
-  Autocompletion options for rooms (**R**), characters (**C**), inventory items (**I**), and dialogs (**D**) will be updated each time you create one of these objects, so you'll be able to access them from the code right away.
-
-  In the next release we will add this for audio files as well!
-
+  Autocompletion options for rooms ([R](https://github.com/mapedorr/popochiu/wiki/IRoom)), characters ([C](https://github.com/mapedorr/popochiu/wiki/ICharacter)), inventory items ([I](https://github.com/mapedorr/popochiu/wiki/IInventory)), dialogs ([D](https://github.com/mapedorr/popochiu/wiki/IDialog)), and audio files ([A](https://github.com/mapedorr/popochiu/wiki/AudioManager)) will be updated each time you create one of these objects, so you'll be able to access them from the code right away.
 - Did you see that? Now we have a new shortcut to access rooms from code: **R**. This allows you to easily get props, hotspots, regions, points and walkable areas in the current room, i.e. `R.get_prop('ToyCar')`, `R.get_hotspot('Window')`, `R.get_walkable_areas()`, and so on.
 - You can define the player-controlled character using the context menu on each character row in the main tab. This will tell the plugin which character will be controlled by the player, and an icon will appear in front of the current PC's row.
-- We have improved the way the `state` variable is defined in rooms, characters, and inventory items. This makes autocompletion work much better because it now shows the variables and methods on these files as you write code.
+- We have improved the way the `state` variable is defined in rooms, characters, and inventory items. This makes autocompletion work much better because it now shows the variables and methods on these files (i.e CharacterGoddiuState.gd) as you write code.
