--- a/release-notes/v2.0-alpha3.md
+++ b/release-notes/v2.0-alpha3.md
@@ -1,4 +1,5 @@
-# Popochiu 2.0 Alpha 3 (for Godot 4.0.x, Godot 4.1.x)
+# Popochiu 2.0 Alpha 3
+[![Godot v4.0.x](https://img.shields.io/badge/Godot-4.0.x-blue)](https://godotengine.org/download/archive/4.0.4-stable/) [![Godot v4.1.x](https://img.shields.io/badge/Godot-4.1.x-blue)](https://godotengine.org/download)
 
 ## New features
 
@@ -8,18 +9,18 @@
 
 ## Fixes
 
-- #79
-- #80
-- #81
-- #82
-- #88
-- #89
-- #96
-- #99
-- Updated the ID of dialog options no longer make the text to write backwards.
+- [Dialog not appearing where the marker is](https://github.com/mapedorr/popochiu/issues/79).
+- [Cannot move WalkToHelper with mouse](https://github.com/mapedorr/popochiu/issues/80).
+- [Cannot Idelete elements from the Popochiu dock](https://github.com/mapedorr/popochiu/issues/81).
+- [Downloading graphical interface files error](https://github.com/mapedorr/popochiu/issues/82).
+- [Issues with playing multiple sound effects](https://github.com/mapedorr/popochiu/issues/88).
+- [Audio cues: can't change pitch setting](https://github.com/mapedorr/popochiu/issues/89).
+- (partial) [Problems with Stretch properties](https://github.com/mapedorr/popochiu/issues/96).
+- [Crash when using camera_zoom](https://github.com/mapedorr/popochiu/issues/99).
+- Updating the ID of dialog options no longer makes the text to write backwards in the Inspector.
 
 
 ## Others
 
-- Removed old methods with `_now` suffix by the new `queue_` prefix when the methods are intended to be used inside `E.queue()`.
+- Replaced old methods with `_now` suffix by the new `queue_` prefix when the methods are intended to be used inside `E.queue()`.
 - Updated README and LEEME with icons to show Godot supported versions and connected Discord users.
