Updated max size for plugin popups

--- a/release-notes/v2.0-alpha4.md
+++ b/release-notes/v2.0-alpha4.md
@@ -14,3 +14,7 @@
 - [Audio Cues: Checking "loop" renders sound silent](https://github.com/mapedorr/popochiu/issues/87)
 - Setting an inventory item as active with add_as_active makes the cursor take the appearance of the item.
 - Devs can select items to start with in the Main tab.
+
+## Others
+
+- Updated the maximum size of the plugin popups in an attempt to improve the UX of Mac users.
