Add mention to @Whyshchuck guide for Region scaling

--- a/release-notes/v2.0.0-beta3.md
+++ b/release-notes/v2.0.0-beta3.md
@@ -13,27 +13,28 @@ This release has new features, various bug fixes, and a bright new guide. Here a
 
 ## Fixes
 
-- [Fix #178](https://github.com/carenalgas/popochiu/issues/178) Changing the GUI template in the Setup popup was causing an issue with the template buttons.
-- [Fix #181](https://github.com/carenalgas/popochiu/issues/181) Exported games (builds) were showing only the GUI, instead of the game as it appeared in the Editor.
-- [Fix #183](https://github.com/carenalgas/popochiu/issues/183) Now exported games can handle interactions in touchscreen devices.
-- [Fix #189](https://github.com/carenalgas/popochiu/issues/189) You make one thing, and break another. The previous fix was causing projects with `input_devices/pointing/emulate_touch_from_mouse` set `true` to crash in the Editor. That's no longer a problem.
-- [Fix #191](https://github.com/carenalgas/popochiu/issues/191) The Game was crashing when running a room without the Player-controlled Character (PC) in it. Now it is correctly added by Popochiu (again).
-- [Fix #196](https://github.com/carenalgas/popochiu/issues/196) Deleting a Hotspot from the scene and also deleting its folder (by using the Remove option in the menu of the Room tab) was not working and causing the game to crash.
-- [Fix #203](https://github.com/carenalgas/popochiu/pull/203) @anthonyirwin82 made the plugin to create the "popochiu-skip" Input Map action work again because it hasn't since we moved to Godot 4.
-- [Fix #208](https://github.com/carenalgas/popochiu/issues/208) We fixed and improved the behavior of the Dialog options menu. Now the cursor renders properly, and long options are wrapped. Additionally, those options now support BBCode! and the component exposes more configuration options. Isn't that great? There is an important thing to mention here: You have no longer to define how menu dialog options should be presented to players before enabling a scrollbar. Now you define the maximum height of the menu and once exceeded, the scrollbar will appear.
+- [Fix #178](https://github.com/carenalgas/popochiu/issues/178): Changing the GUI template in the Setup popup was causing an issue with the template buttons.
+- [Fix #181](https://github.com/carenalgas/popochiu/issues/181): Exported games (builds) were showing only the GUI, instead of the game as it appeared in the Editor.
+- [Fix #183](https://github.com/carenalgas/popochiu/issues/183): Now exported games can handle interactions in touchscreen devices.
+- [Fix #189](https://github.com/carenalgas/popochiu/issues/189): You make one thing, and break another. The previous fix was causing projects with `input_devices/pointing/emulate_touch_from_mouse` set `true` to crash in the Editor. That's no longer a problem.
+- [Fix #191](https://github.com/carenalgas/popochiu/issues/191): The Game was crashing when running a room without the Player-controlled Character (PC) in it. Now it is correctly added by Popochiu (again).
+- [Fix #196](https://github.com/carenalgas/popochiu/issues/196): Deleting a Hotspot from the scene and also deleting its folder (by using the Remove option in the menu of the Room tab) was not working and causing the game to crash.
+- [Fix #203](https://github.com/carenalgas/popochiu/pull/203): @anthonyirwin82 made the plugin to create the "popochiu-skip" Input Map action work again because it hasn't since we moved to Godot 4.
+- [Fix #208](https://github.com/carenalgas/popochiu/issues/208): We fixed and improved the behavior of the Dialog options menu. Now the cursor renders properly, and long options are wrapped. Additionally, those options now support BBCode! and the component exposes more configuration options. Isn't that great? There is an important thing to mention here: You have no longer to define how menu dialog options should be presented to players before enabling a scrollbar. Now you define the maximum height of the menu and once exceeded, the scrollbar will appear.
 
 ## New features
 
-- [Feature #198](https://github.com/carenalgas/popochiu/pull/198) Now double click is supported in **PopochiuClickable** objects thanks to @anthonyirwin82. You can write your `_on_double_click()` logic in Props, Hotspots, and Characters (e.g., make characters move immediately to another room when double-clicking doors, or hotspots that represent exits).
-- [Feature #200](https://github.com/carenalgas/popochiu/pull/200) We moved the Popochiu settings to a new section in the **Project Settings**, instead of having a **Resource** file. We also moved out of them some options that were specific to the **Simple-click Context-sensitive GUI**:
+- [Feature #198](https://github.com/carenalgas/popochiu/pull/198): Now double click is supported in **PopochiuClickable** objects thanks to @anthonyirwin82. You can write your `_on_double_click()` logic in Props, Hotspots, and Characters (e.g., make characters move immediately to another room when double-clicking doors, or hotspots that represent exits).
+- [Feature #200](https://github.com/carenalgas/popochiu/pull/200): We moved the Popochiu settings to a new section in the **Project Settings**, instead of having a **Resource** file. We also moved out of them some options that were specific to the **Simple-click Context-sensitive GUI**:
   - Make the Inventory bar and the Settings bar always visible by turning on that option in the **Inspector** of each node.
   - Define the text speed options in the Settings bar by adding elements to the **Array** of speeds in the **BtnDialogSpeed** node.
-- [Feature #112](https://github.com/carenalgas/popochiu/issues/112) @anthonyirwin82 added the functionality to create markers in rooms using the **Create marker** button in the Room tab. You can remove them from there too.
-- [Feature #202](https://github.com/carenalgas/popochiu/pull/205) Now character's voices stop playing when the character stops talking. In addition, you can know if a **PopochiuAudioCue** is playing with its `is_playing()` function.
-- [Feature #206](https://github.com/carenalgas/popochiu/pull/206) Guess what, @anthonyirwin82 added another feature. He's learning and coding at lightning speed 🐰🏃💨, right? Now characters can teleport to any Prop, Hotspot, or Marker in the room. Use the `PopochiuCharacter.teleport_to_prop()`, `PopochiuCharacter.teleport_to_hotspot()` and `PopochiuCharacter.teleport_to_marker()` functions for that.
-- [Feature #193](https://github.com/carenalgas/popochiu/pull/193) Scaling the GUI is working again and now it is a bit better. This feature is marked as experimental, and you'll see that in its option name in the **Project Settings**. It is intended to be used in the early stages of development, while you are focusing on your game logic and game flow, but not the GUI. In coming releases, we'll improve this by having a Full HD theme for each GUI template.
+- [Feature #112](https://github.com/carenalgas/popochiu/issues/112): @anthonyirwin82 added the functionality to create markers in rooms using the **Create marker** button in the Room tab. You can remove them from there too.
+- [Feature #202](https://github.com/carenalgas/popochiu/pull/205): Now character's voices stop playing when the character stops talking. In addition, you can know if a **PopochiuAudioCue** is playing with its `is_playing()` function.
+- [Feature #206](https://github.com/carenalgas/popochiu/pull/206): Guess what, @anthonyirwin82 added another feature. He's learning and coding at lightning speed 🐰🏃💨, right? Now characters can teleport to any Prop, Hotspot, or Marker in the room. Use the `PopochiuCharacter.teleport_to_prop()`, `PopochiuCharacter.teleport_to_hotspot()` and `PopochiuCharacter.teleport_to_marker()` functions for that.
+- [Feature #193](https://github.com/carenalgas/popochiu/pull/193): Scaling the GUI is working again and now it is a bit better. This feature is marked as experimental, and you'll see that in its option name in the **Project Settings**. It is intended to be used in the early stages of development, while you are focusing on your game logic and game flow, but not the GUI. In coming releases, we'll improve this by having a Full HD theme for each GUI template.
 
 
 ## Welcome to the new getting started guide!
 
 - Thanks to @stickgrinder, now we have a new introductory guide to Popochiu: [Creating a game stub](https://carenalgas.github.io/popochiu/getting-started/creating-a-game-stub/). It will help new-comers, and old users, to learn the basics of Popochiu, or get up to date if coming from version 1 (the one that ran in Godot 3).
+- Also, @Whyshchuck wrote a guide on how to use a **Region** to scale characters depending on their `y` position inside it. You can find that on the [???](https://carenalgas.github.io/popochiu/) page of the Documentation site.
