refs #282: final release notes + changed author of Popochiu to mentions a dev team.

--- a/release-notes/v2.0.0.md
+++ b/release-notes/v2.0.0.md
@@ -25,17 +25,16 @@
 - [TransitionLayer now uses a Control node to block interactions when a transition is playing](https://github.com/carenalgas/popochiu/commit/90d2f745143ad50e5d473619e30711493ce40ce4).
 - [PopochiuClickable clicks are ignored if a dialog is running](https://github.com/carenalgas/popochiu/commit/90d2f745143ad50e5d473619e30711493ce40ce4).
 - ⭐ [We made a HUGE refactor of **E** (`popochiu.gd`). Functions related to the camera are now in the PopochiuMainCamera class, functions related to the rooms are now in **R** (`i_room.gd`), and the same for other things related to specific objects](https://github.com/carenalgas/popochiu/commit/0654f655aae9ca187179424db14db0ac33e4b340).
-- ⭐ [Thanks to @stickgrinder and @drbbgh, now Popochiu has custom gizmos for different properties](https://github.com/carenalgas/popochiu/commit/e009c9db36241d0a84d73dc2bcfcf4bc0d86b5e3). [Including one for the position of dialogs in characters](https://github.com/carenalgas/popochiu/commit/53d956ce166bd15f996fe028b55b6d29a0b92fb9). New gizmos will come in future versions to improve UX while working in the Editor.
-- [We also refactored the objects that allow us to show Popochiu objects as rows in the Popochiu dock (PopochiuObjectRow) making them easier to improve, fix, and mantain](https://github.com/carenalgas/popochiu/commit/17a219e61cdf92207b6c22e21108240cbbfc7272).
-- Started as a feature proposed (and initially coded) by @anthonyirwin82, [now we have a migration tool!!!](https://github.com/carenalgas/popochiu/commit/d45d95438f0a8059d9e7f6fbbee0052376c85c52) that will help devs who started their projects in alpha and beta versions to update to the release version. In future releases this tool will help us make sure (almost) everyone will be able to use the last stable version of the plugin.
-- [You can use the `_on_move_ended()` in **PopochiuCharacter**s function to handle logic when it stops moving](https://github.com/carenalgas/popochiu/commit/e93103b4d9424de6a412d22c6734edf837ee7965).
+- ⭐ [Thanks to the seminal contribution of @drbbgh, now Popochiu has custom gizmos for different properties](https://github.com/carenalgas/popochiu/commit/e009c9db36241d0a84d73dc2bcfcf4bc0d86b5e3). [Including one for the position of dialogs in characters](https://github.com/carenalgas/popochiu/commit/53d956ce166bd15f996fe028b55b6d29a0b92fb9). New gizmos will come in future versions to improve UX while working in the Editor.
+- [We also refactored the class that renders Popochiu objects as rows in the Popochiu dock (PopochiuObjectRow) making the dock easier to improve, fix, and mantain](https://github.com/carenalgas/popochiu/commit/17a219e61cdf92207b6c22e21108240cbbfc7272).
+- Started as a feature proposed (and initially coded) by @anthonyirwin82, [now we have a migration tool!!!](https://github.com/carenalgas/popochiu/commit/d45d95438f0a8059d9e7f6fbbee0052376c85c52) that will help devs who started their projects in alpha and beta versions to update to the release version. In future releases this tool will help us make sure (almost) everyone will be able to use the last stable version of the plugin without losing their work or being stuck with an old version.
+- [You can use the `_on_move_ended()` in **PopochiuCharacter**s function to handle logic when it ends its movement](https://github.com/carenalgas/popochiu/commit/e93103b4d9424de6a412d22c6734edf837ee7965).
 - [Defining the camera limits for rooms is easier now thanks to the new `width` and `height` properties](https://github.com/carenalgas/popochiu/commit/c32b78eb38413f630d8ff37a524d384f1a1a1674).
-- [Thanks to @mefjak you can now enable gibberish text options in Project Settings > Popochiu > Dialogs](https://github.com/carenalgas/popochiu/commit/6cfd50f73dd944e96ac615a0156a404446aacea2).
-- [All the GUIs look more coherent now thanks to @stickgrinder, and I made sure they share the same structure to make them easier to understand](https://github.com/carenalgas/popochiu/commit/b0a4fc49ddd605404f83e5f202325a0ed14b8edd).
+- [Thanks to @mefjak you can now enable gibberish text options in Project Settings > Popochiu > Dialogs](https://github.com/carenalgas/popochiu/commit/6cfd50f73dd944e96ac615a0156a404446aacea2). This is useful if you want to share screens or clips of your game without giving away important clues or dialog parts that may ruin the players' experience.
+- [All the GUIs look more coherent now, and we made sure they share the same scene and components structure to make them easier to understand](https://github.com/carenalgas/popochiu/commit/b0a4fc49ddd605404f83e5f202325a0ed14b8edd). We also restructured and decoupled all the components to make them easier to upgrade in future releases.
 - [The **TransitionLayer** was updated to improve how it adapts to the game native resolution and the new retro-pixel default one: 356x200](https://github.com/carenalgas/popochiu/commit/386f1021732309591879fdf9b3db85fa1e5e12ed).
 
+## Other
 
-## Others
-
-- [Thanks to @stickgrinder now you can post Proposals when creating an issue for the project](https://github.com/carenalgas/popochiu/commit/d4b12761af0e38923e024e43c63e2982de119974).
-- @stickgrinder did a great job documenting how to use our GUI templates.
+- [You can post Proposals when creating an issue for the project](https://github.com/carenalgas/popochiu/commit/d4b12761af0e38923e024e43c63e2982de119974).
+- We documented how to use our GUI templates.
