Add section about removing the old GUI folder

--- a/release-notes/v2.0.0.md
+++ b/release-notes/v2.0.0.md
@@ -38,3 +38,13 @@
 
 - [You can post Proposals when creating an issue for the project](https://github.com/carenalgas/popochiu/commit/d4b12761af0e38923e024e43c63e2982de119974).
 - We documented how to use our GUI templates.
+
+
+## [:exclamation:] Important to read [:exclamation:]
+
+If you already have a working project in Popochiu 2 - Beta X, you'll need to do a couple of things once the migration tool finishes its job:
+
+1. The Setup popup should... pop-up for you to select a GUI (now we have only three options (we removed the Custom meanwhile)).
+2. Select the GUI you want for your game, then click OK. The GUI will be copied, again, to the `res://game/gui/` folder (we made some changes and that's the reason why you'll need to do this).
+3. Now the game's GUI will be on that folder, and you should delete the old `res://game/graphic_interface/` folder. If you made custom components or changes to the code, you'll have to copy them to the new `res://game/gui` folder manually. Take into account that your code should probably go in the scripts that end with `_custom.gd`.
+4. That's all.
