--- a/release-notes/v2.0.0.md
+++ b/release-notes/v2.0.0.md
@@ -44,7 +44,7 @@
 
 If you already have a working project in Popochiu 2 - Beta X, you'll need to do a couple of things once the migration tool finishes its job:
 
-1. The Setup popup should... pop-up for you to select a GUI (now we have only three options (we removed the Custom meanwhile)).
-2. Select the GUI you want for your game, then click OK. The GUI will be copied, again, to the `res://game/gui/` folder (we made some changes and that's the reason why you'll need to do this).
-3. Now the game's GUI will be on that folder, and you should delete the old `res://game/graphic_interface/` folder. If you made custom components or changes to the code, you'll have to copy them to the new `res://game/gui` folder manually. Take into account that your code should probably go in the scripts that end with `_custom.gd`.
+1. The Setup popup should... pop up (heh!) for you to select a GUI. Now we have only three options - we removed the `Custom` option until we rework some bits.
+2. Select the GUI you want for your game, then click OK. The GUI will be copied again to the `res://game/gui/` folder (we made some changes and that's the reason why you'll need to do this).
+3. Now the game's GUI will be in that folder, and you should delete the old `res://game/graphic_interface/` folder. **Expect some errors in the output panel - it's normal and they will go away as soon as you remore the `graphics_interface` folder!** If you made custom components or changes to the code, you'll have to copy them to the new `res://game/gui` folder manually. Take into account that your custom code should probably go in the scripts that end with `_custom.gd`.
 4. That's all.
