Add extra comments to release notes.

--- a/release-notes/v2.0.2.md
+++ b/release-notes/v2.0.2.md
@@ -13,7 +13,8 @@ One of the highlights—and something we're particularly proud of—is that **no
 - [Fixed issues with **DialogText** components aligning dialogue lines, especially when adding colors (thanks to @BenjaTK)](https://github.com/carenalgas/popochiu/issues/262).  
 - [Actions in `PopochiuRoom._on_room_entered()` now execute before the room is drawn to the screen](https://github.com/carenalgas/popochiu/issues/348).  
 - [@balloonpopper fixed a bug causing the inventory in the SimpleClick GUI to play its close animation twice when clicked quickly](https://github.com/carenalgas/popochiu/issues/350).  
-- [@balloonpopper also resolved a double call to the function that closes the Save & Load popup when saving the game](https://github.com/carenalgas/popochiu/pull/363).  
+- [@balloonpopper also resolved a double call to the function that closes the Save & Load popup when saving the game](https://github.com/carenalgas/popochiu/pull/363).
+- @balloonpopper removed some warnings in Popochiu classes, and @edmundito fixed various spelling errors.
 
 ## Improvements
 
